<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Bezigzag.bezigzagtest.Rules">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPhase2"
        android:padding="20dp"
        android:id="@+id/scrollViewRules">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/rules_display_rules"
            android:id="@+id/txtRuleText"
            android:textSize="20sp"
            android:textColor="@color/spade_black"/>
    </ScrollView>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="@id/btnPreparation"
    android:text="@string/rules_menu_title"
    android:textSize="13sp"
    android:textColor="@color/spade_black"
    android:fontFamily="sans-serif-black"
    android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnBackMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintRight_toRightOf="@id/btnPreparation"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/hearts_red"
        android:text="@string/back_to_menu"
        android:textSize="13sp"
        />

<Button
    android:layout_width="300dp"
    android:layout_height="50dp"
    app:layout_constraintTop_toBottomOf="@id/btnBackMenu"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:padding="5dp"
    android:id="@+id/btnPreparation"
    android:text="@string/rules_preparation"
    android:textSize="15sp"
    android:backgroundTint="@color/spade_black"/>

 <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnPreparation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="5dp"
        android:id="@+id/btnDealingCards"
        android:text="@string/rules_dealing_cards"
        android:textSize="15sp"
     android:backgroundTint="@color/spade_black"
     />
<Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnDealingCards"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="5dp"
        android:id="@+id/btnPhase1"
        android:text="@string/rules_first_play_phase"
        android:textSize="15sp"
    android:backgroundTint="@color/spade_black"/>
<Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnPhase1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:padding="5dp"
        android:id="@+id/btnPhase2"
        android:text="@string/rules_second_play_phase"
        android:textSize="15sp"
    android:backgroundTint="@color/spade_black"/>

</androidx.constraintlayout.widget.ConstraintLayout>