<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.Bezigzag.bezigzagtest.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="BEZIGZAG"
        android:id="@+id/txtAppName"
        android:textColor="@color/spade_black"
        android:fontFamily="sans-serif-black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txtVersus"
        app:layout_constraintTop_toBottomOf="@id/btnSavePlayersNames"
        android:id="@+id/txtPlayer1Name"
        android:textColor="@color/spade_black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSavePlayersNames"
        android:id="@+id/txtVersus"
        android:text="VS"
        android:textColor="@color/spade_black"
        android:visibility="gone"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/txtVersus"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSavePlayersNames"
        android:textColor="@color/hearts_red"
        android:id="@+id/txtPlayer2Name"/>

    <EditText
        android:id="@+id/edtPlayer1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName"
        android:hint="@string/two_players_menu_player1"
        android:textColor="@color/spade_black"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/spade_black"
        android:inputType="text"/>


    <EditText
        android:id="@+id/edtPlayer2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer1Name"
        android:hint="@string/two_players_menu_player2"
        android:textColor="@color/spade_black"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/spade_black"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSavePlayersNames"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPlayer2Name"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/medium_gray"
        android:text="OK"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart2PlayersGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer2Name"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/hearts_red"
        android:text="@string/two_players_menu_start_game"
        />



</androidx.constraintlayout.widget.ConstraintLayout>